--- a/views/date.erb
+++ b/views/date.erb
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html>
-<body>
-  <h1>Today</h1>
+<!-- <h1>Today</h1>
 <% day = Date.today.strftime("%A") %>
 <% month= Date.today.strftime("%B") %>
 <% day_of_month= Date.today.strftime("%d") %>
 <% year= Date.today.strftime("%Y") %>
-<h1><%="The date is #{day}, #{month} #{day_of_month}, #{year}"%></h1>
-</body>
-</html>
+<h1><%="The date is #{day}, #{month} #{day_of_month}, #{year}"%></h1> -->
+
+<p>The date is <%= Date.today.strftime("%A, %B %d, %Y")%> </p>
